# django-parse-large-file

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
parse_large_file/: manage.py
parse_large_file/parse_large_file/: asgi.py  celery.py  models.py  serializers.py  settings.py  tasks.py  urls.py  utils.py  views.py  wsgi.py
parse_large_file/parse_large_file/management/commands/: generate_file.py
parse_large_file/parse_large_file/migrations/: 0001_initial.py  0002_alter_customer_age_alter_customer_last_seen.py
parse_large_file/parse_large_file/tests/: test_api_customer_age.py  test_import_customers.py
parse_large_file/parse_large_file/tests/assets/: customer_import.csv
